--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
                 <a href="/edit/<%=posts[i].permalink %>">Edit</a>
             </button>
             <button>
-                <a href="/delete/<%=posts[i].permalink %>">Delete</a>
+             <a href="/delete/<%=posts[i].permalink %>">Delete!</a>
             </button>
         <%}%>
 
