--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -1,10 +1,9 @@
 <% include partials/head %>
 <main>
-        <h1><%= title %></h1>
+        <h1> <%= title %><br> <span class="text-danger"> !? Are You Sure You Want To Delete !? </span></h1>
         <div>
             <%- content %>
         </div>
-    </article>
 <form action= "/delete" method="POST">
     <input type="hidden" id="delID" name="delid" value="<%= id %>">
     <button type="submit">Delete Post</button>
