--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -33,10 +33,12 @@
                             Recent Articles
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <% for(var i = 0; i< posts.length; i++){%>
-                                    <a class="dropdown-item" href="/post/<%=posts[i].permalink %>">
-                                        <%= posts[i].title %></a>
-                                        <%}%>
+                                                     
+                            
+                            <% for(var a =posts.length-1; a >=0; a--) {%>
+                                        <a class="dropdown-item" href="/post/<%=posts[a].permalink %>">
+                            <%= posts[a].title %></a>
+                            <%}%>
 
                         </div>
                     </li>
