--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,51 @@
 <% include partials/head %>
 <div class="row justify-content-center">
-<div id="title-bar" class="w-100 text-center">
-<h1><%= title %></h1>
-</div>
-<!--<p>Welcome to <%= title %></p>
+    <div id="title-bar" class="w-100 text-center">
+        <h1>
+            <%= title %>
+        </h1>
+    </div>
+    <!--<p>Welcome to <%= title %></p>
 <p>DataSource = <%= dataSource %> </p>
 <p>Number of Posts=<%= postCount %></p> -->
 </div>
 <div class="row">
-        <aside class="col-md-4 col-lg-3 p-3 text-center">
-                <img class="img-fluid mx-auto" src="images/dave.jpg">
-                </aside>
-    <main class="col-md-8 col-lg-9 bg-light p-5">
-        <% for(var i = 0; i< posts.length; i++){%>
-        <h1><a href="/post/<%=posts[i].permalink %>">
-                <%= posts[i].title %></a></h1>
+    <aside class="col-md-4 col-lg-3 p-3 text-center">
+        <img class="img-fluid mx-auto" src="images/dave.jpg">
         <div>
-            <%- posts[i].postContent %>
+            <h5>Hi, my name is Dave!</h5>
+            <p>I am a hard working Software Technical Support Representative and Analyst and Software Tester for
+                Micro-Tel Inc. I am currently studying frontend and backend web development with Jeff Ammons of Code
+                Career Academy. </p>
         </div>
-        <button>
-            <a href="/edit/<%=posts[i].permalink %>">Edit</a>
-        </button>
-        <button>
-            <a href="/delete/<%=posts[i].permalink %>">Delete!</a>
-        </button>
+    </aside>
+    <div class="col-md-1"></div>
+    <main class="col-md-6 col-lg-7 bg-light p-5">
+        <% for(var i = posts.length-1; i>=0; i--){%>
+        <div class="mt-2 mb-2 postarea">
+            <div class="row">
+                <div class="col-9 pl-5 pt-2 pb-2">
+            <a class="indexlink" href="/post/<%=posts[i].permalink %>">
+                    <%= posts[i].title %></a>
+                </div>
+                    <div class="col-3 pt-3">
+                    <button class="btn btn-primary">
+                            <a href="/edit/<%=posts[i].permalink %>">Edit</a>
+                        </button>
+                        <button class="btn btn-danger">
+                            <a href="/delete/<%=posts[i].permalink %>">Delete!</a>
+                        </button>
+                   
+                    </div>
+                </div>
+            <div class="postcontentarea">
+                <%- posts[i].postContent %>
+            </div>
+         </div>
         <%}%>
 
     </main>
+    <div class="col-md-1"></div>
 </div>
 
 
