--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -1,27 +1,32 @@
 <% include partials/head %>
 
-    <form action = "/newpost" method="post">
-        <div>
-            <label for= "title">Title</label>
-            <input type = "text" id= "title" name="title">
+<main class="m-3 container">
+
+    <form class="justify-text-center" action = "/newpost" method="post">
+        <div class="row">
+        <div class="form-group  ml-5">
+            <label for= "title">Title</label><br>
+            <input class="inputareabg" type = "text" id= "title" name="title">
         </div>
-        <div>
-                <label for= "permalink">Permalink</label>
-                <input type = "text" id= "permalink" name="permalink">
+        <div class="form-group ml-5">
+                <label for= "permalink">Permalink</label><br>
+                <input class="inputareabg" type = "text" id= "permalink" name="permalink">
         </div>
-        <div>
-                <label for= "postContent">Post Content</label>
-                <textarea id= "postContent" name="postContent" rows="20"></textarea>   
+        <div class="form-group ml-5">
+                <label for= "Author">author</label><br>
+                <input class="inputareabg" type = "text" id= "author" name="author">
         </div>
-      <div>
-                <label for= "author">author</label>
-                <input type = "text" id= "author" name="author">
-        </div>
-        <div>
-            <label for ="passphrase">Passphrase</label>
-                <input type = "text" id = "passphrase" name="passphrase">
+        <div class="form-group ml-5">
+            <label for ="passphrase">Passphrase</label><br>
+                <input class="inputareabg" type = "text" id = "passphrase" name="passphrase">
                     </div>
-        <button type="submit">Save Post</button>
+        <button class="btn btn-success ml-5" type="submit">Save Post</button>
+            </div>
+        <div class="form-group">
+                <label for= "postContent">Post Content</label><br>
+                <textarea class="textareabg" id= "postContent" name="postContent" rows="20"></textarea>   
+        </div>
     </form>
+</main>
 
 <% include partials/foot %>
